fixed bugs, java 21 switch syntax is now fully handled, no more need to add '--add-exports' flags