@@ -1,5 +1,6 @@
 package com.github.bsideup.jabel;
 
+import java.lang.invoke.*;
 import java.lang.reflect.*;
 
 import com.sun.source.util.*;
@@ -13,7 +14,7 @@ import sun.misc.*;
 
 @SuppressWarnings({"deprecation", "removal"})
 public class JabelCompilerPlugin implements Plugin{
-    static Unsafe unsafe;
+    static final Unsafe unsafe;
     static{
         try{
             Field unsafeField = Unsafe.class.getDeclaredField("theUnsafe");
@@ -23,6 +24,7 @@ public class JabelCompilerPlugin implements Plugin{
             throw new RuntimeException(e);
         }
 
+        openCompilerModule();
         forceSourceFeatures();
     }
 
@@ -31,15 +33,12 @@ public class JabelCompilerPlugin implements Plugin{
         Context context = ((BasicJavacTask)task).getContext();
         patchCachedFeatures(context);
         patchPreview(context);
-        removeUnderscoreWarnings(context);
+        removeUnwantedWarnings(context);
 
         task.addTaskListener(new RecordsRetrofittingTaskListener(context));
-        task.addTaskListener(new InstanceofRetrofittingTaskListener(context));
+        task.addTaskListener(new RecordPatternRetrofittingTaskListener(context));
         task.addTaskListener(new SwitchRetrofittingTaskListener(context));
-        try{
-            task.addTaskListener(new FlexibleMainRetrofittingTaskListener(context));
-        // Because JCDiagnostic.Warning doesn't exists on Java 8. But we don't care at this point
-        }catch(NoClassDefFoundError ignored){}
+        task.addTaskListener(new FlexibleMainRetrofittingTaskListener(context));
         task.addTaskListener(new ImplicitClassesFixerTaskListener(context));
     }
 
@@ -49,8 +48,46 @@ public class JabelCompilerPlugin implements Plugin{
     }
 
     /** Make it auto starts on Java 14+. */
+    @Override
     public boolean autoStart(){
         return true;
+    }
+
+    /** Play with the JVM to get access to the 'jdk.compiler' packages without '--add-opens' flags. =) */
+    static void openCompilerModule() {
+        try {
+            Class.forName("java.lang.Module");
+        } catch (Exception e) {
+            return; // No modules on Java 8
+        }
+        try {
+            // Get the trusted lookup that ignores modules checks
+            Field implLookupField = MethodHandles.Lookup.class.getDeclaredField("IMPL_LOOKUP");
+            long offset = unsafe.staticFieldOffset(implLookupField);
+            MethodHandles.Lookup trustedLookup =
+                (MethodHandles.Lookup)unsafe.getObject(MethodHandles.Lookup.class, offset);
+
+            // Now use that trusted lookup to open packages
+            Module compilerModule = ModuleLayer.boot().findModule("jdk.compiler")
+                .orElseThrow(() -> new RuntimeException("jdk.compiler module not found!"));
+            MethodHandle addOpens = trustedLookup.findVirtual(
+                Module.class,
+                "implAddOpens",
+                MethodType.methodType(void.class, String.class)
+            );
+            for (String pkg : compilerModule.getPackages()) {
+                addOpens.invokeExact(compilerModule, pkg);
+            }
+
+        } catch (Throwable th) {
+            // We can't always be lucky ¯\_(ツ)_/¯
+            System.err.println("WARNING: Failed to open compiler packages!");
+            System.err.println("WARNING: Please add the following arguments to the command:");
+            for (String p : new String[] {"api", "code", "comp", "tree", "util"}) {
+                System.err.println("WARNING:   --add-opens=jdk.compiler/com.sun.tools.javac." + p + "=ALL-UNNAMED");
+            }
+            throw new RuntimeException(th);
+        }
     }
 
     static void forceSourceFeatures(){
@@ -77,8 +114,9 @@ public class JabelCompilerPlugin implements Plugin{
             for(Source.Feature feat : Source.Feature.values()){
                 if(Arrays_contains(blacklist, feat.name())) continue;
                 Source current = (Source)unsafe.getObject(feat, featureFieldOffset);
-                if(current.ordinal() > Source.JDK8.ordinal())
+                if(current.ordinal() > Source.JDK8.ordinal()){
                     unsafe.putObject(feat, featureFieldOffset, Source.JDK8);
+                }
             }
         }catch(Exception e){
             throw new RuntimeException(e);
@@ -89,6 +127,7 @@ public class JabelCompilerPlugin implements Plugin{
      * Several compiler components cache {@link Source.Feature#allowedInSource()} results. <br>
      * Since these objects may be created <em>before</em> Jabel,
      * this method will try to force all {@code allow*} fields to {@code true}.
+     * (except {@code allowModules} fields, because the module system is not yet supported by Jabel)
      */
     static void patchCachedFeatures(Context context){
         Object[] comps = {
@@ -101,22 +140,23 @@ public class JabelCompilerPlugin implements Plugin{
             for(Field f : comp.getClass().getDeclaredFields()){
                 try{
                     if(f.getType() != boolean.class || !f.getName().startsWith("allow")) continue;
+                    if(f.getName().equals("allowModules")) continue; // special case
                     unsafe.putBoolean(comp, unsafe.objectFieldOffset(f), true);
                 }catch(Exception ignored){}
              }
         }
     }
 
-    /** Removes warnings about {@code '_'}. */
-    static void removeUnderscoreWarnings(Context context){
-        // Need to inherit a class instead.
-        // This is due to DeferredDiagnosticHandler(Predicate) being DeferredDiagnosticHandler(Filter) on Java 16-
+    /** Removes warnings about {@code '_'} and preview features. */
+    static void removeUnwantedWarnings(Context context){
         Log.instance(context).new DiscardDiagnosticHandler(){
             @Override
             public void report(JCDiagnostic diag){
                 String code = diag.getCode();
                 if (code.contains("underscore.as.identifier") ||
-                    code.contains("use.of.underscore.not.allowed")) return;
+                    code.contains("use.of.underscore.not.allowed") ||
+                    code.startsWith("compiler.warn.preview") ||
+                    code.startsWith("compiler.note.preview")) return;
                 prev.report(diag);
             }
         };
@@ -129,41 +169,24 @@ public class JabelCompilerPlugin implements Plugin{
             return false; // the class doesn't exists bellow Java 11.10
         }
 
-        Preview preview = Preview.instance(context);
-
         try{
             // Enable preview features
             Field enabledField = Preview.class.getDeclaredField("enabled");
-            unsafe.putBoolean(preview, unsafe.objectFieldOffset(enabledField), true);
+            unsafe.putBoolean(Preview.instance(context), unsafe.objectFieldOffset(enabledField), true);
         }catch(Exception e){
             System.err.println("WARNING: Failed to enable preview features.");
             return false;
         }
 
-        // Disable preview for TypeEnter, to avoid implicit StringTemplate import on Java 21-23
-        try{
-            Symtab.class.getDeclaredField("stringTemplateType"); // Simple check
-            Field previewField = TypeEnter.class.getDeclaredField("preview");
-            TypeEnter enter = TypeEnter.instance(context);
-            unsafe.putObject(enter, unsafe.objectFieldOffset(previewField), Preview.instance(new Context()));
-        }catch(Exception ignored){}
-
-        try{
-            // Disable preview removal warning
+        String source = Source.DEFAULT.name;
+        // Disable preview for TypeEnter, to avoid implicit StringTemplate import on JDK 21-23
+        if (source.equals("21") || source.equals("22") || source.equals("23")) {
             try{
-                Field verboseField = Preview.class.getDeclaredField("verbose");
-                unsafe.putBoolean(preview, unsafe.objectFieldOffset(verboseField), false);
-            }catch(NoSuchFieldException e){
-                Field handlerField = Preview.class.getDeclaredField("previewHandler");
-                MandatoryWarningHandler handler =
-                    (MandatoryWarningHandler)unsafe.getObject(preview, unsafe.objectFieldOffset(handlerField));
-                Field handlerVerbose = MandatoryWarningHandler.class.getDeclaredField("verbose");
-                unsafe.putBoolean(handler, unsafe.objectFieldOffset(handlerVerbose), false);
-            }
-        }catch(Exception e){
-            System.err.println("WARNING: Failed to suppress preview feature warnings. " +
-                               "Don't worry if you see weird messages.");
-            return false;
+                Symtab.class.getDeclaredField("stringTemplateType"); // Simple check
+                Field previewField = TypeEnter.class.getDeclaredField("preview");
+                TypeEnter enter = TypeEnter.instance(context);
+                unsafe.putObject(enter, unsafe.objectFieldOffset(previewField), Preview.instance(new Context()));
+            }catch(Exception ignored){}
         }
 
         return true;
